--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/contact.html.twig
@@ -1,26 +1,26 @@
 {% block body %}
 
-    <h1 class="titlePage"><span>Contact</span></h1>
+    <h1 class="titlePage"><span>{{ 'gc.title.contact'|trans }}</span></h1>
 
     <section id="map" class="map_full">
         <iframe src="http://map.gospel-center.com"></iframe>
         <article>
-            <h1>Gospel Center Jura</h1>
+            <h1>Gospel Center Lausanne</h1>
 
-            <p>Rue St-Georges 5<br/>
-                2800 Delémont<br/>
+            <p>Avenue de Provence 4<br/>
+                1007 Lausanne<br/>
                 Suisse</p>
 
-            <p>032 422 88 31</p>
-            <a href="mailto:info@gc-lausanne.org">info@gc-jura.org</a>
+            <p>+41 (0)848 123 777</p>
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
 
             <p><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'give'}) }}"
-                  class="buttonLink">Nous soutenir</a></p>
+                  class="buttonLink">{{ 'gc.nav.give'|trans }}</a></p>
         </article>
     </section>
 
     <section class="formGray">
-        <h1>Ecrivez nous un message</h1>
+        <h1>{{ 'gc.page.contact.writeMessage'|trans }}</h1>
 
         <form>
             <fieldset class="left width1_3">
