--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -43,11 +43,24 @@
 
     <h1>A place where miracles happen!</h1>
 
-    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/a-propos.jpg') }}" srcset="{{ asset('bundles/gospelcenterpage/images/a-propos_2x.jpg') }} 2x">
+    {% set aboutImg = 'bundles/gospelcenterpage/images/a-propos.jpg' %}
+
+    <img class="big"
+         src="{{ asset(aboutImg)| imagine_filter('blog_big_low') }}"
+         srcset="{{ asset(aboutImg)| imagine_filter('blog_big_2x') }} 2x"
+         data-img="{{ asset(aboutImg)| imagine_filter('blog_big') }}"
+         data-img_2x="{{ asset(aboutImg)| imagine_filter('blog_big_2x') }}"
+         data-img_tablet="{{ asset(aboutImg)| imagine_filter('blog_big_tablet') }}"
+         data-img_tablet_2x="{{ asset(aboutImg)| imagine_filter('blog_big_tablet_2x') }}"
+         data-img_mobile="{{ asset(aboutImg)| imagine_filter('blog_big_mobile') }}"
+         data-img_mobile_2x="{{ asset(aboutImg)| imagine_filter('blog_big_mobile_2x') }}">
+
 
     <h2 class="underline"><span>Qui</span></h2>
 
-    <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank" href="http://www.evangelique.ch">RES</a>), et de la Fédération romande des Églises
+    <p>Le Gospel Center Lausanne est membre du Réseau évangélique suisse (<a target="_blank"
+                                                                             href="http://www.evangelique.ch">RES</a>),
+        et de la Fédération romande des Églises
         évangéliques (<a target="_blank" href="http://www.lafree.ch">FREE</a>).</p>
 
     <h2 class="underline"><span>Comment</span></h2>
@@ -242,7 +255,17 @@
 
     <h1>Ce que nous croyons</h1>
 
-    <img class="big" src="{{ asset('bundles/gospelcenterpage/images/confession.jpg') }}" srcset="{{ asset('bundles/gospelcenterpage/images/confession_2x.jpg') }} 2x">
+    {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
+
+    <img class="big"
+         src="{{ asset(believeImg)| imagine_filter('blog_big_low') }}"
+         srcset="{{ asset(believeImg)| imagine_filter('blog_big_2x') }} 2x"
+         data-img="{{ asset(believeImg)| imagine_filter('blog_big') }}"
+         data-img_2x="{{ asset(believeImg)| imagine_filter('blog_big_2x') }}"
+         data-img_tablet="{{ asset(believeImg)| imagine_filter('blog_big_tablet') }}"
+         data-img_tablet_2x="{{ asset(believeImg)| imagine_filter('blog_big_tablet_2x') }}"
+         data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
+         data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
 
     <p>Nous croyons que la Bible est inspirée par Dieu. La Parole de Dieu est la base unique de notre foi, de notre
         doctrine, et conduit nos actions.</p>
