--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/bases.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/bases.html.twig
@@ -1,11 +1,11 @@
-<h2 class="slogan findBase">TROUVEZ UNE BASE PRÈS DE CHEZ VOUS</h2>
+<h2 class="slogan findBase">{{ 'gc.page.bases.findBase'|trans }}</h2>
 
 <section id="map" class="map_full">
     <iframe src="http://map.gospel-center.com"></iframe>
 </section>
 
 <section class="formGray">
-    <h1>Pour plus d'infos, contactez-nous</h1>
+    <h1>{{ 'gc.page.bases.moreInfos'|trans }}</h1>
 
     <form>
         <fieldset class="left width1_3">
