--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/contact.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
 
-    <h1 class="titlePage"><span>Contact</span></h1>
+    <h1 class="titlePage"><span>{{ 'gc.title.contact'|trans }}</span></h1>
 
     <section id="map" class="map_full">
         <iframe src="http://map.gospel-center.com"></iframe>
@@ -15,12 +15,12 @@
             <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
 
             <p><a href="{{ path('gospelcenterPage_default', {'center': center.ref, 'page': 'give'}) }}"
-                  class="buttonLink">Nous soutenir</a></p>
+                  class="buttonLink">{{ 'gc.nav.give'|trans }}</a></p>
         </article>
     </section>
 
     <section class="formGray">
-        <h1>Ecrivez nous un message</h1>
+        <h1>{{ 'gc.page.contact.writeMessage'|trans }}</h1>
 
         <form>
             <fieldset class="left width1_3">
