--- a/web/sass/advanced/_events.scss
+++ b/web/sass/advanced/_events.scss
@@ -525,6 +525,8 @@
                 padding-right: 10px;
                 margin-top: 40px;
 
+
+
                 section.left,
                 section.right {
                     display: block;
@@ -533,6 +535,12 @@
 
                     & > article {
                         margin-top: 30px;
+
+                        &.details {
+                            p {
+                                font-size: 1.3em;
+                            }
+                        }
 
                         &.dates {
                             margin-bottom: 0;
