--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/edit.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/edit.html.twig
@@ -58,7 +58,7 @@
         
         {{ form_rest(form) }}
 
-        <input type="submit" class="buttonLink" value="Edit a slide"/>
+        <input type="submit" class="buttonLink" value="Save changes"/>
     </form>
     
     
